// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing App behavior Should show error 1`] = `
<Fragment>
  <Toolbar
    actions={
      Array [
        <Memo(ConnectFunction) />,
        <Memo(ConnectFunction) />,
      ]
    }
    colored={true}
    component="header"
    prominent={true}
    singleColor={true}
    title="Movie Finder"
  />
  <div
    id="content"
  >
    <ErrorMessage
      message="Error message"
    />
  </div>
</Fragment>
`;

exports[`Testing App behavior Should show list if movies 1`] = `
<Fragment>
  <Toolbar
    actions={
      Array [
        <Memo(ConnectFunction) />,
        <Memo(ConnectFunction) />,
      ]
    }
    colored={true}
    component="header"
    prominent={true}
    singleColor={true}
    title="Movie Finder"
  />
  <div
    id="content"
  >
    <Connect(MovieList) />
  </div>
</Fragment>
`;

exports[`Testing App behavior Should show loading 1`] = `
<Fragment>
  <Toolbar
    actions={
      Array [
        <Memo(ConnectFunction) />,
        <Memo(ConnectFunction) />,
      ]
    }
    colored={true}
    component="header"
    prominent={true}
    singleColor={true}
    title="Movie Finder"
  />
  <div
    id="content"
  >
    <CircularProgress
      centered={true}
      determinateDashoffset={187}
      id="loading"
      scale={1}
      style={Object {}}
    />
  </div>
</Fragment>
`;
